# documentation

./: .gitignore  .gitmodules  README.md  new-article  pyproject.toml
docs/: Makefile
docs/_build/dirhtml/: .buildinfo  404.html  index.html  objects.inv  searchindex.js
docs/_build/doctrees/: environment.pickle  index.doctree
docs/source/: index.rst
docs/source/getting-started/: introduction.rst
site/: 03-todo.md  Makefile
site/_utils/: deploy_gh_pages.sh  deploy_staging.sh  setup.sh
site/source/: about.rst  conf.py  diy.rst  index.rst  quick-start.rst  umbrel-compare.rst
site/source/_static/: custom.js
site/source/_templates/: layout.html
site/source/about/: contact.rst  index.rst  jobs.rst  team.rst  (+4 more)
source/: 03-index.md  03-todo.md  conf.py  index.rst
source/_static/: default.css
source/_templates/: layout.html  versioning.html
source/available-services/: index.rst
source/concepts/: embassy-os.rst  open-source.rst  services.rst  ssl.rst  tor.rst
source/contributing/: adding-services.rst  beta-testing.rst  documentation.rst  embassyos.rst  index.rst  template.rst
source/dev-docs/: index.rst  packaging-example.rst
source/developer/: alt-reg.rst  beta.rst  sdk.rst  ssh.rst
source/getting-started/: connect.rst  connecting.rst  dashboard.rst  diy.rst  initial-setup.rst  introduction.rst  marketplace.rst  purchase.rst  purchasing.rst  setup.rst  unboxing.rst
source/misc-guides/: available-services.rst  bitcoin-cli.rst
source/support/: concepts.rst  contact.rst  faq.rst
source/user-manual/: connecting.rst  index.rst  initial-setup.rst
(+1049 files in other folders)
